<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_category"
            android:title="@string/categoria" />
        <item
            android:id="@+id/nav_ofertas"
            android:icon="@drawable/ic_offers"
            android:title="@string/ofertas" />
        <item
            android:id="@+id/nav_nuevoprod"
            android:icon="@drawable/ic_newprod"
            android:title="@string/nuevos_productos" />
        <item
            android:id="@+id/nav_mispedidos"
            android:icon="@drawable/ic_orders"
            android:title="@string/mis_pedidos" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_cart"
            android:title="@string/carrito" />
    </group>
</menu>