<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.elperlanegra.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.elperlanegra.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_categoria"
        android:name="com.example.elperlanegra.ui.categoria.CategoriaFragment"
        android:label="@string/categoria"
        tools:layout="@layout/fragment_categoria" />
    <fragment
        android:id="@+id/nav_ofertas"
        android:name="com.example.elperlanegra.OfertasFragment"
        android:label="@string/ofertas"
        tools:layout="@layout/fragment_ofertas" />
    <fragment
        android:id="@+id/nav_nuevoprod"
        android:name="com.example.elperlanegra.NuevoProdFragment"
        android:label="@string/nuevos_productos"
        tools:layout="@layout/fragment_nuevo_prod" />
    <fragment
        android:id="@+id/nav_mispedidos"
        android:name="com.example.elperlanegra.MisPedidosFragment"
        android:label="@string/mis_pedidos"
        tools:layout="@layout/fragment_mis_pedidos" />
    <fragment
        android:id="@+id/nav_carrito"
        android:name="com.example.elperlanegra.CarritoFragment"
        android:label="@string/carrito"
        tools:layout="@layout/fragment_carrito" />
</navigation>